@@ -1,3 +1,7 @@
+Sat, Dec 14, 2008
+---------------------------------------------------------------------
+- Work on leads schema, model, and fixtures.
+
 Sat, Dec 13, 2008
 ---------------------------------------------------------------------
 - Insalled [annotate_models] plugin and generated model annotations.
